[MODFQMMGR-1015] Add source join validation for custom ETs